<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:menu="@menu/main"
    android:background="@color/grey">
    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey"
        >

        <com.example.myapplication.PaintView
            android:id="@+id/paintView"
            android:layout_width="0dp"
            android:layout_height="600dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/li"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/paintView"
            app:layout_constraintVertical_bias="0.965"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="222dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="8dp">


                <SeekBar
                    android:id="@+id/seeBar"
                    android:layout_width="185dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintVertical_bias="0.512" />

                <TextView
                    android:id="@+id/current_pen_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="40dp"
                    android:text="@string/pen_size"
                    android:textColor="@color/white"
                    app:layout_constraintVertical_bias="0.486" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/eraser"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:foreground="@mipmap/eraser_foreground"
                android:text="@string/eraser"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@color/grey"
                app:layout_constraintEnd_toStartOf="@+id/options"
                app:layout_constraintHorizontal_bias="0.393"
                app:layout_constraintStart_toEndOf="@+id/seeBar"
                app:layout_constraintTop_toBottomOf="@+id/paintView"
                app:layout_constraintVertical_bias="0.65" />
            <ImageButton
                android:id="@+id/change_color_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:foreground="@drawable/ic_baseline_palette_24"
                android:text="@string/color"
                android:background="@color/grey"
                app:layout_constraintBottom_toTopOf="@+id/options"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/paintView"
                app:layout_constraintVertical_bias="1.0" />
            <ImageButton
                android:id="@+id/blendMode"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/layers"
                android:foreground="@drawable/ic_layers"
                app:layout_constraintBottom_toTopOf="@+id/changeBrushes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                android:background="@color/grey"
                app:layout_constraintStart_toStartOf="parent" />
            <ImageButton
                android:id="@+id/options"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:background="@color/grey"
                android:foreground="@drawable/ic_baseline_menu_24"
                android:text="@string/options"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/seeBar"
                tools:ignore="MissingConstraints" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/li"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.982"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            android:visibility="invisible"
            android:background="@color/grey">

            <LinearLayout
                android:id="@+id/changeOpacity"
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:text="@string/opacity"
                app:layout_constraintBottom_toTopOf="@+id/change_color_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                android:orientation="vertical"
                android:background="@color/grey">
                <SeekBar
                    android:id="@+id/opacityBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:max="255"
                    android:indeterminateDrawable="@color/white"
                    app:layout_constraintVertical_bias="0.512"/>
                <TextView
                    android:id="@+id/opacity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/pen_size"
                    app:layout_constraintVertical_bias="0.486"/>

            </LinearLayout>

            <ImageButton
                android:id="@+id/changeBrushes"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/brushes"
                android:foreground="@drawable/ic_baseline_brush_24"
                app:layout_constraintBottom_toTopOf="@+id/changeOpacity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                android:background="@color/grey"
                app:layout_constraintStart_toStartOf="parent"/>
            <ImageButton
                android:id="@+id/pouring"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/fiilcolor"
                android:foreground="@mipmap/fillcolor_foreground"
                app:layout_constraintBottom_toTopOf="@+id/blendMode"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                android:background="@color/grey"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/brushesAndRadius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/brushes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageButton
                    android:id="@+id/brush"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:text="@string/brush"
                    android:foreground="@drawable/ic_brush"/>
                <ImageButton
                    android:id="@+id/feltPen"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:text="@string/feltpen"
                    android:foreground="@mipmap/ic_airbrush_foreground"/>

                <ImageButton
                    android:id="@+id/pen"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:text="@string/pen"
                    android:foreground="@mipmap/ic_pen_foreground"/>

                <ImageButton
                    android:id="@+id/pencil"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:text="@string/pencil"
                    android:foreground="@mipmap/ic_pencil_foreground"/>
                <ImageButton
                    android:id="@+id/wierd"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:text="@string/wierd"
                    android:foreground="@mipmap/ic_wierd_foreground"/>
            </LinearLayout>

            <SeekBar
                android:id="@+id/blurRadius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:indeterminateDrawable="@color/white"
                app:layout_constraintVertical_bias="0.512"
                android:min="1"/>

            <TextView
                android:id="@+id/raidus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pen_size"
                android:textColor="@color/black"
                app:layout_constraintVertical_bias="0.486" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollViewButtons"
            android:layout_width="100dp"
            android:layout_height="300dp"
            android:visibility="invisible"
            android:background="@color/grey"
            app:layout_constraintBottom_toTopOf="@+id/li"
            app:layout_constraintEnd_toEndOf="parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/listOfButtons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/grey"
                    android:orientation="vertical">
                    <Button
                        android:id="@+id/normalMode"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="normal"
                        android:background="@color/grey"
                        android:textColor="@color/white"/>
                    <Button
                        android:id="@+id/clearMode"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="clear"
                        android:background="@color/grey"
                        android:textColor="@color/white"/>
                    <Button
                        android:id="@+id/addMode"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="add"
                        android:background="@color/grey"
                        android:textColor="@color/white"/>
                    <Button
                        android:id="@+id/darkenMode"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="darken"
                        android:background="@color/grey"
                        android:textColor="@color/white"/>
                    <Button
                        android:id="@+id/lightenMode"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="lighten"
                        android:background="@color/grey"
                        android:textColor="@color/white"/>
                    <Button
                        android:id="@+id/multiplyMode"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="multiply"
                        android:background="@color/grey"
                        android:textColor="@color/white"/>
                    <Button
                        android:id="@+id/overlayMode"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="overlay"
                        android:background="@color/grey"
                        android:textColor="@color/white"/>
                    <Button
                        android:id="@+id/screenMode"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="screen"
                        android:background="@color/grey"
                        android:textColor="@color/white"/>
                    <Button
                        android:id="@+id/xorMode"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="xor"
                        android:background="@color/grey"
                        android:textColor="@color/white"/>
                </LinearLayout>
            </RelativeLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        tools:ignore="MissingConstraints"
        app:menu="@menu/navigation_menu"
        app:headerLayout="@layout/layout_navigation_header"
        app:itemTextColor="@color/white"
        android:background="@color/grey"/>
</androidx.drawerlayout.widget.DrawerLayout>